--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 from gibberish import Gibberish
 
 text = """
-Download a few hundered words of text from http://www.gutenberg.org/ebooks and paste them here
+Download a few hundred words of text from http://www.gutenberg.org/ebooks and paste them here
 """
 
 g = Gibberish(text, 4)
